--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Project-Title",
+  "name": "Real-Estate-tokenization",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
